--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    // "SQLServerIdentityConnection": "Server=localhost;Database=shopthoitrangg;Trusted_Connection=True;TrustServerCertificate=True;"
-    "SQLServerIdentityConnection": "Server=ShopAoQuanCuaTeam.mssql.somee.com,1433;Database=ShopAoQuanCuaTeam;User Id=emprodk2003_SQLLogin_2;Password=gjt15kz59o;Trusted_Connection=False;TrustServerCertificate=True;"
+    "SQLServerIdentityConnection": "Server=localhost;Database=shopthoitrangg;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
