--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLServerIdentityConnection": "Server=LAPTOP-DNBUOJ7O;Database=shopthoitrangg;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SQLServerIdentityConnection": "Server=localhost;Database=shopthoitrangg;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
